--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,8 @@
       },
       // Add the IDs of extensions you want installed when the container is created.
       "extensions": [
-        "golang.Go"
+        "golang.Go",
+        "ms-azuretools.vscode-docker"
       ]
     }
   },
@@ -37,6 +38,7 @@
   // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   "remoteUser": "vscode",
   "features": {
+    "docker-from-docker": "24",
     "git": "os-provided"
   }
 }
