Grant read-only contents permission to workflow
GitHub tightened default workflow permissions, so give the docker-build-test workflow explicit read access to repository contents so it can build and test Docker images on PRs.

- Adds permissions: contents: read to .github/workflows/docker-build-test.yaml

--- a/.github/workflows/docker-build-test.yaml
+++ b/.github/workflows/docker-build-test.yaml
@@ -1,6 +1,9 @@
 # Build the Docker image to make sure it works
 name: docker-build-test
 
+permissions:
+  contents: read
+
 on:
   pull_request:
     branches:
