Use unexported version variable with getter
Make version an internal variable and expose it via Get() so callers
use a stable accessor and goreleaser can set the var at build time.

- Rename Version -> version and add Get() in internal/version
- Update callers and tests to use version.Get()
- Fix goreleaser ldflags to set internal/version.version

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -26,7 +26,7 @@ builds:
       - darwin
     ldflags:
       - -s -w
-      - -X github.com/boringbin/sbomlicense/internal/version.Version={{.Version}}
+      - -X github.com/boringbin/sbomlicense/internal/version.version={{.Version}}
   - id: sbomlicensed
     binary: sbomlicensed
     main: ./cmd/sbomlicensed
@@ -38,7 +38,7 @@ builds:
       - darwin
     ldflags:
       - -s -w
-      - -X github.com/boringbin/sbomlicense/internal/version.Version={{.Version}}
+      - -X github.com/boringbin/sbomlicense/internal/version.version={{.Version}}
 
 archives:
   # Separate archive for CLI tool
